# dati-semantic-schema-assistant-cms

./: .dockerignore  .gcloudignore  .gitignore  README.md  cloudbuild.agent.yaml  cloudbuild.ingestion.yaml  cloudbuild.web.yaml  pyproject.toml
.github/scripts/: detect-modules.sh  publish-image.sh
.github/workflows/: ci.yml  deploy-dev.yml  deploy-ingestion-dev.yml
apps/web/: Dockerfile  README.md  angular.json  package-lock.json  package.json  security-headers.mjs  security-headers.test.mjs  server.mjs
apps/web/src/: index.html  main.ts  styles.scss
config/: entities_config.json  resources.json  routing_lexicon.json
docs/: Documento_Progettazione_Migrazione_Google_Cloud.docx  Documento_Requisiti_Migrazione_Google_Cloud.docx  deploy-dev.md  github-actions-cicd.md  knowledge-base-design.md
infra/envs/dev/: dev.tfvars.example  main.tf  outputs.tf  variables.tf
infra/modules/cloud_run/: main.tf  outputs.tf  variables.tf
infra/modules/foundation/: main.tf  outputs.tf  variables.tf
infra/modules/github_actions/: main.tf  outputs.tf  variables.tf
infra/modules/project_services/: main.tf  variables.tf
jobs/ingestion/: Dockerfile
services/agent/: Dockerfile
src/schema_assistant/: __init__.py
src/schema_assistant/agent/: __init__.py  __main__.py  app.py  (+10 more)
tests/: test_agent_language_policy.py  test_agent_prompt_security.py  test_agent_retrieval.py  test_agent_static_answers.py  test_firestore_vector_store.py  test_ingestion_chunking.py  test_ingestion_discovery.py  test_ingestion_parsers.py  test_ingestion_report.py  test_knowledge_base_paths.py
(+33 files in other folders)
