[project]
name = "dati-semantic-schema-assistant-cms"
version = "0.1.0"
description = "Schema Assistant cloud migration workspace"
requires-python = ">=3.12,<3.13"
dependencies = [
]

[project.optional-dependencies]
agent = [
    "fastapi>=0.115.0",
    "google-cloud-firestore>=2.20.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.34.0",
]
ingestion = [
    "google-cloud-firestore>=2.20.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.0.0",
    "pdfplumber>=0.11.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.0",
    "rdflib>=7.1.0",
]

[project.scripts]
schema-assistant-agent = "schema_assistant.agent.__main__:main"

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
    "types-pyyaml>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schema_assistant"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
